tests/fixtures/valid/geo-polygon.omts
{
  "omtsf_version": "0.1.0",
  "snapshot_date": "2026-02-22",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "nodes": [
    {
      "id": "fac-polygon",
      "type": "facility",
      "name": "Polygon Facility",
      "geo": {
        "type": "Polygon",
        "coordinates": [
          [
            [10.0, 50.0],
            [11.0, 50.0],
            [11.0, 51.0],
            [10.0, 51.0],
            [10.0, 50.0]
          ]
        ]
      }
    }
  ],
  "edges": []
}
