tests/fixtures/invalid/duplicate-identifier.omts
{
  "omtsf_version": "0.1.0",
  "snapshot_date": "2026-02-18",
  "file_salt": "a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890a1b2c3d4e5f67890",
  "nodes": [
    {
      "id": "org-acme",
      "type": "organization",
      "name": "Acme Corp",
      "identifiers": [
        { "scheme": "lei", "value": "5493006MHB84DD0ZWV18" },
        { "scheme": "lei", "value": "5493006MHB84DD0ZWV18" }
      ]
    }
  ],
  "edges": []
}
